Created PlayerActivity and implemented click listener for individual movie

--- a/app/src/main/res/layout/movie_carousel_item.xml
+++ b/app/src/main/res/layout/movie_carousel_item.xml
@@ -11,6 +11,7 @@
     >
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/movieImageContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="@dimen/dp_8"
